# RBAC

./: .gitignore  SuperAdmin.py  TEST.IPYNB  alembic.ini  main.py  pyproject.toml
Schema/: auth_schema.py  tool_schema.py
Utills/: editprofile.py  oauth2.py  tool.py
config/: log_config.py  pydantic_config.py
database/: database.py  model.py
routes/: auth.py  edit.py  organisation.py  tools.py
